--- a/public/index.html
+++ b/public/index.html
@@ -46,4 +46,13 @@
   <script src="js/index.js"></script>
   <script src="js/idb.js"></script>
 </body>
+<script>
+(function(){
+  if("serviceWorker" in navigator){
+    navigator.serviceWorker.register("./service-worker.js")
+      .then(() => console.log("service worker registered"))
+      .catch(error => console.log("registeration failed.",error));
+  }
+})();
+</script>
 </html>
